--- a/themes/witty/css/global.css
+++ b/themes/witty/css/global.css
@@ -668,23 +668,27 @@ div.star_hover a, div.star a:hover { background-position: 0 -32px }
 	display:block;
 	position:absolute;
 	top:0px;
-	height:70px;
+	height:60px;
 	width:100%;
 	background-color:#fff;
+	border-top: solid 3px #b93636;
 	border-bottom: solid 1px #e7e7e7;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 	
 #header {
 	position:relative;
+	padding-bottom: 40px;
 }
+
 #header .logo {
 	float:left;
 	display:block;
-	margin-top:15px;
+	margin-top:0px;
 	background:url(../img/logo_bonneambiance.png);
-	height:41px;
-	width:297px;
+	height:177px;
+	width:242px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 #header_right {
