--- a/themes/witty/css/modules/blocksearch/blocksearch.css
+++ b/themes/witty/css/modules/blocksearch/blocksearch.css
@@ -13,33 +13,36 @@
 #search_block_filet{
 	display: block;
     float: left;
-    height: 70px;
-    margin-left: 30px;
-    width: 300px;
-    padding-left: 25px;
-    border-left: solid 1px #e7e7e7;
+    height: 60px;
+    margin-left: 2px;
+    width: 470px;
+    padding-left: 20px;
+    margin-top: 50px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e1e1e1;
+    border-bottom: 1px solid #e1e1e1;
 }
 
 #search_block_top{
 	display:block;
-	width:285px;
+	width:445px;
 	float:left;
 	margin-right: 0px;
 	position: relative;
 	font-family:"Arial", Helvetica, sans-serif;
 	font-size:13px;
 	color:#9e9d9d;
-	margin-top:18px;
+	margin-top:8px;
 }
 
 #searchbox input[type=text]{
 	float:left;
 	border:0;
-	width:249px;
-	height:35px;
+	width:325px;
+	height:45px;
 	background:url(images/champ_rechercher.png) top left no-repeat;
 	color:#9e9d9d;
-	padding:5px 0 0 40px;
+	padding:10px 0 0 60px;
 }
 
 #searchbox input[type=text]:focus{
@@ -49,8 +52,8 @@
 #searchbox input[type=submit]{
 	float:left;
 	border:0;
-	width:35px;
-	height:35px;
+	width:120px;
+	height:45px;
 	background:url(images/champ_rechercher.png) top right no-repeat;
 	cursor:pointer;
 }
