--- a/themes/witty/css/product.css
+++ b/themes/witty/css/product.css
@@ -1,25 +1,33 @@
+/*
+.fiche{
+	display: block;
+	position: relative;
+	background-color: white;
+	width:960px;
+	height: auto;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	padding: 20px;
+}
+*/
+
 .galerie{
 	display:block;
-	/*margin-left:auto;
-	margin-right:auto;*/
-	margin-left:5%;
-	/*width:490px;
-	height:400px;*/
-	width:400px;
-	height:400px;
-	/*background-color:#CCC;*/
+	width:440px;
+	height:600px;
+	background-color: white;
 	float:left;
-	margin-top:5px;/*30px;*/
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .ficheJeu{
 	display:block;
-	margin-left:auto;
-	margin-right:auto;
 	width:490px;
 	height:auto;
 	float:right;
 	margin-top:5px;/*30px;*/
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	padding: 20px;
+	background-color: white;
 }
 
 .ficheJeu .infosGauche li{
@@ -67,6 +75,7 @@
 	font-size:13px;
 	color: #797c7d;
 	line-height:18px;
+	padding-bottom: 0px;
 }
 
 .ficheJeu .filet{
@@ -345,7 +354,7 @@ a.pack_price{
 }
 
 #bigpic{
-	width:100%;
+	width:440px;
 	/*width:600px;
 	margin-top:-100px;
 	margin-left: -55px;*/
