--- a/modules/wittyblockbestsellers/static/css/wittyblockbestsellers.css
+++ b/modules/wittyblockbestsellers/static/css/wittyblockbestsellers.css
@@ -9,10 +9,12 @@ section.meilleuresVentes{
 .meilleuresVentes .titreMeilleuresVentes{
 	display:block;
 	position: relative;
-	float: left;
-	color: 202227;
-	font-size: 22px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 50px;
+	background-image:url(../images/titre_best.png);
+	height:40px;
+	width:1000px;
 }
 
 .meilleuresVentes h2{
