--- a/themes/witty/css/product_list.css
+++ b/themes/witty/css/product_list.css
@@ -42,8 +42,8 @@
 }
 
 .jeu .titre{
-	font-family: Arial;
-	font-weight: bold;
+	font-family: 'Amaranth', sans-serif;
+	font-weight:normal;
 	font-size: 16px;
 	text-align: center;
 	color: #202227;
